# cadabra2

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  Accent_8cc.html  Accent_8hh.html  Accent_8hh_source.html  Actions_8cc.html  Actions_8hh.html  Actions_8hh_source.html  Algorithm_8cc.html  Algorithm_8hh.html  Algorithm_8hh_source.html  AntiCommuting_8cc.html  AntiCommuting_8hh.html  AntiCommuting_8hh_source.html  AntiSymmetric_8cc.html  AntiSymmetric_8hh.html  AntiSymmetric_8hh_source.html  AppDelegate_8h.html  AppDelegate_8h_source.html  AppDelegate_8mm.html  Bridge_8cc.html  Bridge_8hh.html  Bridge_8hh_source.html  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cadabra_8cc.html  Cadabra_8hh.html  Cadabra_8hh_source.html  CdbPython_8cc.html  CdbPython_8hh.html  CdbPython_8hh_source.html  Cleanup_8cc.html  Cleanup_8hh.html  Cleanup_8hh_source.html  CodeInput_8cc.html  (+1405 more)
c++lib/: .gitignore  CMakeLists.txt  README.txt  SympyDummy.cc  adjform.cc  cadabra2++  cpplib.hh.in  nevaluate.cc  nevaluate.py  simple.cc  trivial.cc
client_server/: Actions.cc  Actions.hh  CMakeLists.txt  Client.cc  Client.hh  ComputeThread.cc  ComputeThread.hh  DataCell.cc  DataCell.hh  DocumentThread.cc  DocumentThread.hh  GUIBase.cc  GUIBase.hh  Log.hh  ScriptThread.cc  ScriptThread.hh  Server.cc  Server.hh  Snoop.cc  Snoop.hh  SnoopPrivate.hh  TODO  cadabra-jupyter-kernel.cc  cadabra-jupyter-kernel.hh  cadabra-jupyter-main.cc  cadabra-server.cc  cadabra2html.cc  cadabra2latex.cc  kernel.json  notebook.html  notebook.tex  popen2.cc  popen2.hh  regexp_tester.cc  test_client.cc  test_server.cc  test_talk_to_server.cc  tree.hh  websocket_client.cc  websocket_client.hh  (+2 more)
client_server/websocketpp/: utilities.hpp
core/: .gitignore  Adjform.cc  Adjform.hh  Algorithm.cc  Algorithm.hh  Bridge.cc  Bridge.hh  CMakeLists.txt  CdbPython.cc  CdbPython.hh  Cleanup.cc  Cleanup.hh  Combinatorics.cc  Combinatorics.hh  Compare.cc  Compare.hh  Config.hh  Config.hh.in  DataCell.cc  DataCell.hh  Debug.hh  DisplayBase.cc  DisplayBase.hh  DisplayMMA.cc  DisplayMMA.hh  DisplaySympy.cc  DisplaySympy.hh  DisplayTeX.cc  DisplayTeX.hh  DisplayTerminal.cc  DisplayTerminal.hh  Dummies.hh  Equals.cc  Equals.hh  Evaluator.cc  Evaluator.hh  ExManip.cc  ExManip.hh  ExNode.cc  ExNode.hh  (+102 more)
core/algorithms/: algorithms.tex  all_contractions.tex  amnesia.tex  asym.cnb  asymprop.tex  breakgendelta.tex  canonicalise.cc  canonicalise.cnb  canonicalise.hh  coefficients.tex  collect_components.cc  collect_components.hh  collect_factors.cc  collect_factors.cnb  collect_factors.hh  collect_terms.cc  collect_terms.cnb  collect_terms.hh  collect_terms.tex  combine.cc  combine.cnb  combine.hh  combine.tex  complete.cc  complete.cnb  complete.hh  component.hh  component.tex  decompose.cc  decompose.cnb  decompose.hh  decompose.tex  decompose_product.cc  decompose_product.cnb  decompose_product.hh  decompose_product.tex  depprint.tex  distribute.cc  distribute.cnb  distribute.dox  (+217 more)
core/modules/: Lie.cc  Spinors.cc  xperm_new.cc  xperm_new.h
core/properties/: Accent.cc  Accent.cnb  Accent.hh  AntiCommuting.cc  AntiCommuting.cnb  AntiCommuting.hh  AntiSymmetric.cc  AntiSymmetric.cnb  AntiSymmetric.hh  Commuting.cc  Commuting.cnb  Commuting.hh  CommutingAsProduct.cc  CommutingAsProduct.cnb  CommutingAsProduct.hh  CommutingAsProduct.tex  CommutingAsSum.cc  CommutingAsSum.cnb  CommutingAsSum.hh  CommutingBehaviour.cc  CommutingBehaviour.hh  Coordinate.cc  Coordinate.cnb  Coordinate.hh  DAntiSymmetric.cc  DAntiSymmetric.cnb  DAntiSymmetric.hh  Depends.cc  Depends.cnb  Depends.hh  DependsBase.hh  DependsInherit.cc  DependsInherit.hh  DependsInherit.tex  Derivative.cc  Derivative.cnb  Derivative.hh  Derivative.tex  DerivativeOp.cc  DerivativeOp.hh  (+139 more)
core/pythoncdb/: py_algorithms.cc  py_algorithms.hh  py_ex.cc  py_ex.hh  py_globals.cc  py_globals.hh  py_helpers.cc  py_helpers.hh  py_kernel.cc  py_kernel.hh  py_media.cc  py_media.hh  py_module.cc  py_ntensor.cc  py_ntensor.hh  py_packages.cc  py_packages.hh  py_progress.cc  py_progress.hh  py_properties.cc  py_properties.hh  py_stopwatch.cc  py_stopwatch.hh  py_tableau.cc  py_tableau.hh
frontend/: CMakeLists.txt
frontend/common/: CMakeLists.txt  TeXEngine.cc  TeXEngine.hh  exec-stream.cc  exec-stream.h  lodepng.cc  preamble.tex  test.cc  test_tex.cc  testpre.tex
frontend/gtkmm/: #CMakeLists.txt#  .#CMakeLists.txt  .#CodeInput.hh  CMakeLists.txt  Cadabra.cc  Cadabra.hh  ChooseColoursDialog.cc  ChooseColoursDialog.hh  CodeInput.cc  CodeInput.hh  Console.cc  Console.hh  DiffViewer.cc  DiffViewer.hh  GraphicsView.cc  GraphicsView.hh  ImageView.cc  ImageView.hh  Keywords.cc  Keywords.hh  Netbits.cc  Netbits.hh  NotebookCanvas.cc  NotebookCanvas.hh  NotebookWindow.cc  main.cc  (+15 more)
jupyterkernel/: .gitignore  CMakeLists.txt  README.md  pyproject.toml  readme.txt  setup.py
server/: CMakeLists.txt  CadabraClient.cc  CadabraClient.hh  Client.cc  Client.hh  Server.cc  Server.hh  server.cc  test_client.cc  test_talk_to_server.cc
src/: Algorithm.cc  Algorithm.hh  CMakeLists.txt  Cleanup.cc  Cleanup.hh  Combinatorics.hh  Compare.cc  Compare.hh  CoreProps.cc  CoreProps.hh  DisplayTeX.cc  DisplayTeX.hh  Exceptions.cc  Exceptions.hh  Exchange.cc  Exchange.hh  Kernel.cc  Kernel.hh  Numerical.cc  Numerical.hh  Parser.cc  Parser.hh  PreClean.cc  PreClean.hh  Props.cc  Props.hh  PythonCdb.cc  PythonCdb.hh  PythonException.cc  Stopwatch.cc  Storage.cc  Storage.hh  YoungTab.cc  cadabra  cadabra2  cadabra2_defaults.py  defaults.py
tests/: .gitignore  CMakeLists.txt  algebra.cdb  basic.cdb  callbacks.cdb  canonicalise.cdb  components.cdb  decompose.cdb  decompose.cnb  delta.cdb  derivative.cdb  display.cdb  display.cnb  dummies.cdb  explicit_implicit.cdb  factor.cdb  field_theory.cdb  fierz.cdb  fixed_point.cdb  forms.cdb  gamma.cdb  gamma_paper.cdb  implicit.cdb  in.cdb  index_positions.cdb  integrals.cdb  ipynb_module.ipynb  kaluza_klein.cdb  kerr.cnb  latexform.cnb  manip.cdb  meld.cdb  mma.cdb  mma.cnb  module01.cnb  module02.cnb  module03.cdb  modules.cdb  multiterm.cdb  nevaluate.cdb  (+35 more)
(+855 files in other folders)
